--- a/demo-site/css/style.css
+++ b/demo-site/css/style.css
@@ -1,22 +1,245 @@
-/*
-Errno::ENOENT: No such file or directory - style.scss
+.clearfix:after {
+  visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: " ";
+  clear: both;
+  height: 0;
+}
 
-Backtrace:
-/usr/local/rvm/gems/ruby-1.9.3-p194/gems/sass-3.2.14/lib/sass/plugin/compiler.rb:360:in `read'
-/usr/local/rvm/gems/ruby-1.9.3-p194/gems/sass-3.2.14/lib/sass/plugin/compiler.rb:360:in `update_stylesheet'
-/usr/local/rvm/gems/ruby-1.9.3-p194/gems/sass-3.2.14/lib/sass/plugin/compiler.rb:203:in `block in update_stylesheets'
-/usr/local/rvm/gems/ruby-1.9.3-p194/gems/sass-3.2.14/lib/sass/plugin/compiler.rb:201:in `each'
-/usr/local/rvm/gems/ruby-1.9.3-p194/gems/sass-3.2.14/lib/sass/plugin/compiler.rb:201:in `update_stylesheets'
-/usr/local/rvm/gems/ruby-1.9.3-p194/gems/sass-3.2.14/lib/sass/plugin/compiler.rb:283:in `block in watch'
-/usr/local/rvm/gems/ruby-1.9.3-p194/gems/sass-3.2.14/vendor/listen/lib/listen/multi_listener.rb:108:in `call'
-/usr/local/rvm/gems/ruby-1.9.3-p194/gems/sass-3.2.14/vendor/listen/lib/listen/multi_listener.rb:108:in `on_change'
-/usr/local/rvm/gems/ruby-1.9.3-p194/gems/sass-3.2.14/vendor/listen/lib/listen/multi_listener.rb:117:in `block in initialize_adapter'
-/usr/local/rvm/gems/ruby-1.9.3-p194/gems/sass-3.2.14/vendor/listen/lib/listen/adapter.rb:198:in `call'
-/usr/local/rvm/gems/ruby-1.9.3-p194/gems/sass-3.2.14/vendor/listen/lib/listen/adapter.rb:198:in `report_changes'
-/usr/local/rvm/gems/ruby-1.9.3-p194/gems/sass-3.2.14/vendor/listen/lib/listen/adapter.rb:210:in `poll_changed_dirs'
-/usr/local/rvm/gems/ruby-1.9.3-p194/gems/sass-3.2.14/vendor/listen/lib/listen/adapters/darwin.rb:38:in `block in start'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Errno::ENOENT: No such file or directory - style.scss"; }
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: 'Vollkorn', serif;
+  color: #444444;
+}
+
+a {
+  color: #ffffff;
+}
+
+h1 {
+  font-size: 100px;
+  font-weight: 400;
+  line-height: 65px;
+  text-align: left;
+}
+
+h2 {
+  color: #fff;
+  font-size: 60px;
+  text-transform: uppercase;
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
+  letter-spacing: 1px;
+  text-align: right;
+  margin-right: 5%;
+  padding-top: 641px;
+}
+
+p {
+  font-size: 20px;
+  line-height: 40px;
+}
+
+.text-callout {
+  font-style: italic;
+  font-size: 38px;
+}
+
+.slide-odd {
+  background-attachment: fixed;
+  -webkit-background-size: cover;
+  background-size: cover;
+  z-index: 1;
+  height: 700px;
+}
+
+.slide-even {
+  z-index: 2;
+  background-color: #ffffff;
+  text-align: center;
+}
+
+.text {
+  width: 56%;
+  display: inline-block;
+  vertical-align: top;
+  margin: 0 auto;
+  padding: 10% 5%;
+}
+
+.color-splash {
+  width: 36%;
+  display: inline-block;
+  margin: 0 auto;
+}
+
+.color-splash img {
+  width: 100%;
+  text-align: center;
+}
+
+#slide-1 {
+  background-image: url(../images/demo-site-photos/royal-purple.jpg);
+  height: 900px;
+}
+#slide-1 header {
+  position: absolute;
+  top: 5%;
+  left: 5%;
+  color: #ffffff;
+  text-align: center;
+}
+#slide-1 header .small {
+  font-size: 50px;
+  font-style: italic;
+  padding-right: 20px;
+}
+#slide-1 header .small:first-child {
+  padding-left: 60px;
+}
+#slide-1 header .arrow {
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 100%;
+  width: 100px;
+  height: 100px;
+  position: relative;
+  margin: 0 auto;
+  margin-top: 100px;
+}
+#slide-1 header .arrow img {
+  position: absolute;
+  left: 17px;
+  top: 35px;
+}
+#slide-1 h2 {
+  padding-top: 841px;
+}
+
+#slide-3 {
+  background-image: url(../images/demo-site-photos/verdigris.jpg);
+}
+
+#slide-5 {
+  background-image: url(../images/demo-site-photos/ochre.jpg);
+}
+
+#slide-7 {
+  background-image: url(../images/demo-site-photos/kohl.jpg);
+}
+
+#slide-9 {
+  background-image: url(../images/demo-site-photos/magenta.jpg);
+}
+
+#slide-11 {
+  background-image: url(../images/demo-site-photos/emerald.jpg);
+}
+
+#slide-13 {
+  background-image: url(../images/demo-site-photos/cinnibar.jpg);
+}
+
+#slide-15 {
+  background-image: url(../images/demo-site-photos/brown.jpg);
+}
+
+#slide-17 {
+  background-image: url(../images/demo-site-photos/prussian-blue.jpg);
+}
+
+#slide-19 {
+  background-image: url(../images/demo-site-photos/deep-champagne.jpg);
+}
+
+footer {
+  font-size: 16px;
+  background-color: #444444;
+  padding: 40px;
+  text-align: center;
+  color: white;
+  line-height: 30px;
+}
+
+footer a:hover {
+  color: #8BC9BE;
+}
+
+@media (max-width: 1060px) {
+  .text {
+    padding: 8% 5%; } }
+@media (max-width: 950px) {
+  .text p {
+    font-size: 18px;
+    line-height: 36px; }
+
+  .text-callout {
+    font-size: 34px; } }
+@media (max-width: 725px) {
+  .text, .color-splash {
+    display: block;
+    width: 80%; }
+
+  .text {
+    padding: 5% 5%;
+    text-align: left;
+    width: 80%; }
+
+  #slide-1 header h1 {
+    font-size: 85px;
+    line-height: 50px; }
+
+  #slide-1 header .small {
+    font-size: 38px;
+    font-style: italic;
+    padding-right: 15px; }
+    #slide-1 header .small:first-child {
+      padding-left: 45px; } }
+@media (max-width: 585px) {
+  .slide-odd {
+    height: 300px;
+    background-attachment: scroll;
+    background-size: 200% auto; }
+
+  #slide-1 {
+    height: 500px;
+    background-attachment: scroll;
+    background-size: 350% auto; }
+
+  #slide-1 .arrow {
+    display: none; }
+
+  #slide-1 header h1 {
+    line-height: 80px; }
+
+  #slide-1 header .small {
+    line-height: 50px;
+    font-size: 38px;
+    font-style: italic;
+    padding-right: 15px; }
+    #slide-1 header .small:first-child {
+      padding-left: 45px; }
+
+  #slide-1 h2 {
+    padding-top: 470px; }
+
+  h2 {
+    font-size: 30px;
+    padding-top: 270px;
+    margin-right: 0;
+    text-align: center; }
+
+  .text {
+    padding: 4% 0%; } }
