--- a/starter-files/css/style.css
+++ b/starter-files/css/style.css
@@ -1,3 +1,5 @@
+@import url('fontawesome.min.css');
+
 * {
   margin: 0;
   padding: 0;
@@ -73,4 +75,5 @@ footer {
 #slide-1 h2 {
   margin-top: 200px;
 }
+
 
